# microCraftHacks

./: .env.example  .gitignore  .npmignore  LICENSE  README.md  RELEASE_CHECKLIST.md  package-lock.json  package.json  tsconfig.json
agent_runtime/: pyproject.toml
agent_runtime/cyber_swarm/: .npmignore  __init__.py  bridge.py  runner.py
agent_runtime/cyber_swarm/agents/: __init__.py  attack_planner.py  demo_llm.py  demo_prompt.py  model_stages.py  recon.py  shared.py
agent_runtime/cyber_swarm/demo/: __init__.py  diagnostics.py
agent_runtime/cyber_swarm/evidence/: __init__.py  draft_helpers.py  env_config.py  extract.py  graph_drafts.py  ignore.py  models.py  packs.py  prompt.py  reader.py  refs.py  secret_packs.py  seek.py
agent_runtime/cyber_swarm/graph/: __init__.py  agent_nodes.py  attack_graph_builder.py  attack_graph_nodes.py  evidence_nodes.py  nodes.py  rag_nodes.py  state.py  verifier_nodes.py  workflow.py
agent_runtime/cyber_swarm_runtime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent_runtime/tests/: test_agent_activation.py  test_agents_recon.py  test_agents_specialists.py  test_attack_graph.py  test_cache.py  test_dedup.py  test_demo_diagnostics.py  test_demo_llm.py  test_demo_quality.py  test_deterministic_secrets.py  test_env_config_evidence.py  test_evidence_packs.py  test_model_stages.py  test_normalize.py  test_output_redaction.py  test_providers.py  test_rag_loop.py  test_ranking.py  test_report_md.py  test_retrieval.py  test_retrieval_quality.py  test_runner.py  test_verifier.py  test_verifier_nodes.py
(+151 files in other folders)
