[project]
name = "cyber-swarm-runtime"
version = "0.1.0"
description = "Python LangGraph agent runtime for Cyber Swarm"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "openai>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cyber_swarm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
